<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>open.vincentf13</groupId>
        <artifactId>service</artifactId>
        <version>0.0.1-SNAPSHOT</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <groupId>open.vincentf13.spot</groupId>
    <artifactId>spot-exchange</artifactId>
    <packaging>pom</packaging>

    <name>spot-exchange</name>
    <description>Spot Exchange service aggregation</description>

    <modules>
        <module>spot-infra</module>
        <module>spot-matching</module>
        <module>spot-ws-api</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <maven.compiler.release>21</maven.compiler.release>
        <sbe.version>1.30.0</sbe.version>
        <chronicle.queue.version>5.25ea12</chronicle.queue.version>
        <chronicle.map.version>3.25ea5</chronicle.map.version>
        <aeron.version>1.44.0</aeron.version>
        <disruptor.version>4.0.0</disruptor.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>open.vincentf13.spot</groupId>
                <artifactId>spot-infra</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>open.vincentf13.spot</groupId>
                <artifactId>spot-matching</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>uk.co.real-logic</groupId>
                <artifactId>sbe-all</artifactId>
                <version>${sbe.version}</version>
            </dependency>
            <dependency>
                <groupId>net.openhft</groupId>
                <artifactId>chronicle-queue</artifactId>
                <version>${chronicle.queue.version}</version>
            </dependency>
            <dependency>
                <groupId>net.openhft</groupId>
                <artifactId>chronicle-map</artifactId>
                <version>${chronicle.map.version}</version>
            </dependency>
            <dependency>
                <groupId>io.aeron</groupId>
                <artifactId>aeron-all</artifactId>
                <version>${aeron.version}</version>
            </dependency>
            <dependency>
                <groupId>com.lmax</groupId>
                <artifactId>disruptor</artifactId>
                <version>${disruptor.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
